<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Sobre" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idealizado_nmgp" />

    <Button
        android:id="@+id/btnBlogNmgp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_blog" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desenvolvido" />

    <Button
        android:id="@+id/btnDesenvolvedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link" />

</LinearLayout>